@@ -535,7 +535,7 @@ Memory allocation (code space): 48
 ------------------------------------------------------------------
 
 /( ( (?(1)0|) )*   )/xBM
-Memory allocation (code space): 108
+Memory allocation (code space): 104
 ------------------------------------------------------------------
   0  23 Bra
   2  19 CBra 1
@@ -553,7 +553,7 @@ Memory allocation (code space): 108
 ------------------------------------------------------------------
 
 /(  (?(1)0|)*   )/xBM
-Memory allocation (code space): 88
+Memory allocation (code space): 84
 ------------------------------------------------------------------
   0  18 Bra
   2  14 CBra 1
